# harmony-example

./: .gitignore  .gitmodules
basic_crc/: oh-package.json5
basic_crc/AppScope/: app.json5
basic_crc/AppScope/resources/base/element/: string.json
basic_crc/crc32/: Cargo.toml
basic_crc/crc32/src/: lib.rs
basic_crc/entry/: oh-package.json5
basic_crc/entry/libs/: index.d.ts
basic_crc/entry/src/main/cpp/: CMakeLists.txt
basic_crc/entry/src/main/cpp/types/libentry/: index.d.ts
basic_crc/entry/src/main/ets/pages/: Index.ets
cross-compiler/cmake/cmake-file/: CMakeLists.txt  main.cpp
cross-compiler/llvm/: build.sh  hello.c
cross-compiler/mmkv/: oh-package.json5
cross-compiler/mmkv/AppScope/: app.json5
cross-compiler/mmkv/AppScope/resources/base/element/: string.json
cross-compiler/mmkv/entry/src/main/cpp/: CMakeLists.txt  hello.cpp
go-example/: .gitignore
go-example/go-shared/: add.go  go.mod  main.c
go-example/hello/: Cargo.toml  build.rs
go-example/hello/src/: lib.rs
go-example/scripts/: build-basic.sh  build-harmony.sh  build-zig.sh  run-c.sh  zig.sh
node-addon-api/entry/: oh-package-lock.json5  oh-package.json5
node-addon-api/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
node-addon-api/entry/src/main/ets/pages/: Index.ets
openssl/: oh-package.json5
openssl/AppScope/: app.json5
openssl/AppScope/resources/base/element/: string.json
openssl/entry/: build-profile.json5  oh-package.json5
openssl/entry/src/main/: module.json5
openssl/entry/src/main/cpp/: CMakeLists.txt  hello.cpp
openssl/entry/src/main/cpp/types/libentry/: index.d.ts
openssl/entry/src/main/ets/pages/: Index.ets
openssl/request/: Cargo.toml  build.sh
openssl/request/src/: lib.rs
sm/AppScope/: app.json5
sm/AppScope/resources/base/element/: string.json
sm/entry/: oh-package-lock.json5  oh-package.json5
sm/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  sm2.h  sm3.h  sm4.h
sm/entry/src/main/cpp/types/libentry/: Index.d.ts
sm/entry/src/main/ets/pages/: Index.ets
sm/ssl/: sm2-private.key  sm2-public.key
use-native/: build-profile.json5
use-native/entry/: oh-package.json5
use-native/entry/src/main/cpp/: CMakeLists.txt
use-native/entry/src/main/ets/pages/: Index.ets
zig-example/hello/: Cargo.toml
zig-example/hello/src/: lib.rs
zig-example/zig-lib/: build.zig  fizzbuzz.zig
zig-napi-example/: build.zig  build.zig.zon
zig-napi-example/src/: hello.zig
(+1 files in other folders)
