[package]
name    = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos        = { git = "https://github.com/ohos-rs/ohos-rs.git",branch = "ohos" }
napi-derive-ohos = { git = "https://github.com/ohos-rs/ohos-rs.git" ,branch = "ohos"}

[build-dependencies]
napi-build-ohos = { git = "https://github.com/ohos-rs/ohos-rs.git",branch = "ohos" }

[profile.release]
lto = true
